# chrust

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build_linux.sh  build_macos.sh  build_win.bat  build_win.sh  index.html  run.sh
boards/: board2.json  game_start_pawn_close.json
release/macos/chrust-0.1.0/boards/: empty_board.json  game_start_bishop_close.json  game_start_king_close.json
release/macos/chrust-0.1.0/static/js/: chrust.js
release/win/chrust-0.1.0/boards/: board1.json  game_start_knight_close.json  game_start_queen_close.json  game_start_rook_close.json  game_start_small.json  game_start_tiny.json
release/win/chrust-0.1.0/static/css/: chrust.css
src/: lib.rs  main.rs
src/ai/: decision.rs  decisionmaker.rs  mod.rs
src/ai/minimax/: boardstate.rs  evaluate.rs  funcs.rs  max.rs  mod.rs
src/api/: backend.rs  mod.rs
src/board/: chessboard.rs  coordinate.rs  mod.rs
src/board/cell/: chesspiece.rs  color.rs  mod.rs  piecetype.rs
src/boards/: board1.json  game_start-BAK.json  game_start.json
src/chessmove/: action.rs  chessmove.rs  mod.rs  piecemove.rs
src/ext/: mod.rs  stringext.rs
src/frontend/: cors.rs  mod.rs  responses.rs  server.rs
src/game/: chessgame.rs  mod.rs
src/newpackage/: mod.rs  please.rs
src/player/: aiplayer.rs  chessplayer.rs  humanplayer.rs  mod.rs
src/playertwo/: aiplayer.rs  humanplayer.rs  mod.rs
src/state/: mod.rs  programstate.rs  viztype.rs
src/visualize/: mod.rs  visualizer.rs  visualizer2.rs
static/: index.html
static/css/: chessboard.css  chrust.css
static/js/: chrust.js  test.js
