[package]
name = "chrust"
version = "0.1.0"
authors = ["John Yenter-Briars <jyenterbriars@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0"
serde_derive="1.0"
serde_json = "1.0"
tui = "0.15.0"
termion = "1.5.6"   
