[package]
name = "chrust"
version = "0.1.0"
authors = ["John Yenter-Briars <jyenterbriars@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.20", features = [ "serde" ] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
serde="1.0"
serde_derive="1.0"
serde_json = "1.0"
clap = "3.0.0-beta.4"